# ALU_Testbench_UVM_8Bit

./: .gitignore  LICENSE  Makefile  README.md  filelist.f  pyproject.toml  requirements.txt
Docs/: architecture.md
Python/: requirements.txt  start_rl_server.py  train_agent.py
Python/Analysis/: comparison_report.py
Python/Bridge/: pyhdl_if_bridge.py
Python/RL/: alu_rl_environment.py  rl_agents.py  rl_trainer.py
Python/Sequences/: sequence_generator.py
Scripts/: run_simulation.sh
Testbench/: ALU_RL_Agent.sv  ALU_RL_Bridge.sv  ALU_RL_Coverage_Collector.sv  ALU_RL_Driver.sv  ALU_RL_Env.sv  ALU_RL_Scoreboard.sv  ALU_RL_Sequence.sv  ALU_RL_Test.sv  ALU_RL_Top.sv  ALU_RL_pkg.sv
Testbench/bridge/: pyhdl_if_bridge.sv
Testbench/sequences/: ALU_RL_Sequence.sv
Testbench/tests/: ALU_RL_Test.sv
ai/: __init__.py  evaluate.py  run_comparison.py  train.py
ai/agents/: coverage_agent.py
ai/analysis/: comparator.py  reporter.py
ai/core/: config.py  orchestrator.py
ai/environments/: alu_coverage_env.py  alu_sim_model.py
ai/generators/: seed_optimizer.py  stimulus_generator.py
docs/: ARCHITECTURE.md  BRIDGE_PROTOCOL.md  RL_DESIGN.md  architecture.md  rl_methodology.md  user_guide.md
rl/: __init__.py  alu_env.py  alu_gym_env.py  alu_model.py  bridge.py  bridge_env.py  compare.py  coverage_model.py  evaluate.py  random_baseline.py  rl_agent.py  run_rl_verification.py  train.py  uvm_bridge.py
scripts/: compare.sh  run_ai_verification.sh  run_compare.sh  run_comparison.sh  run_random.sh  run_rl.sh  run_vcs.sh
tb_rl/: filelist.f
tests/: test_rl_stack.py
(+32 files in other folders)
